tests/fixtures/invalid/pow_bool_none.py
# Cannot call pow() with Bool, None
x = pow(True, None)
